Fixing test and calculations issues
